#184: Fixed line break in pricing page

--- a/src/pages/pricing.css
+++ b/src/pages/pricing.css
@@ -6,6 +6,7 @@
   font-size: 64px;
   font-weight: 500;
   font-family: lato;
+  max-width: 23ch;
 }
 
 .p-text-primary {
